--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,11 @@ python-dotenv = "*"
 
 [dev-packages]
 autopep8 = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.8"
 
 [scripts]
 dev="python run.py"
-test="python run_test.py"
+test="pytest -s"
