Write documentation in README.md
- add image in /docs
- update .env.template
- create file requirements.txt

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
-PORT=
-MODE_API=
-WHITE_LIST=
+PORT=3000
+MODE_API=development
+WHITE_LIST=http://localhost:8080
+URL_SII_CHILE=https://www.sii.cl
+ACCESS_TOKEN=1234
