--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "ms-python.autopep8",
-    "ms-python.python"
+    "ms-python.python",
+    "esbenp.prettier-vscode"
   ]
 }
