create files of docker
- create dockerfile and docker-compose
- improves in readme
- add other environment variable
- create dockerfile and docker-compose

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 PORT=3000
-MODE_API=development
+MODE_API=
+DEBUG=
 WHITE_LIST=http://localhost:8080
 URL_SII_CHILE=https://www.sii.cl
 ACCESS_TOKEN=1234
